# autodidactic-qml

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  REPRODUCE.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: phase_transition_metrics.py
autodidactic_protocols/: mutual_information_drive.py
correspondence_maps/: emergent_geometry.py  matrix_to_rnn.py
docs/: claim.md  kt2_artifacts.md  sqnt_definition.md
experiments/: demo_autodidactic_loop.py  emergent_geometry_experiment.py  kt2_locality_falsifier.py  phase_transition_scan.py  roundtrip_gauge_robustness.py  roundtrip_invariant_preservation.py  sqnt_loop_topology_dynamics.py  ucip_protocol.py
loop_dynamics_integration/: retrocausal_feedback.py
matrix_models/: action_functionals.py  hermitian_ensemble.py
quantum_kernels/: amplitude_encoding.py
sqnt/: falsification_protocol.py
tests/: test_experiments.py  test_negative_control_separation.py  test_provenance.py  test_sqnt.py
ucip_detection/: __init__.py  representation_constraints.py  temporal_preference_score.py
