[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodidactic-qml"
version = "0.1.0"
description = "Autodidactic Quantum Machine Learning Loop Falsifier"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Christopher Altman", email = "chris@christopheraltman.com"}
]
keywords = ["quantum", "machine-learning", "topology", "sqnt", "autodidactic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
    "tqdm>=4.66",
    # Plotting/Analysis commonly used but not strictly required for decisive run?
    # Adding as core deps for better UX.
    "matplotlib>=3.7",
    "scipy>=1.10",
    "networkx>=3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
include = ["matrix_models*", "experiments*", "autodidactic_protocols*", "correspondence_maps*", "quantum_kernels*", "sqnt*", "topology*", "ucip_detection*", "analysis*", "loop_dynamics_integration*", "protocols*"]
exclude = ["tests*", "notebooks*", "logs*", "build*", "dist*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    # Ignore specific physics hygiene warnings during tests if they are expected
    "default:::analysis.physics_hygiene",
]
